--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -31,3 +31,110 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+
+.icon-search:before {
+  content: "\f002";
+}
+.icon-envelope-o:before {
+  content: "\f003";
+}
+.icon-lock:before {
+  content: "\f023";
+}
+.icon-map-marker:before {
+  content: "\f041";
+}
+.icon-eye:before {
+  content: "\f06e";
+}
+.icon-shopping-cart:before {
+  content: "\f07a";
+}
+.icon-bar-chart:before {
+  content: "\f080";
+}
+.icon-bar-chart-o:before {
+  content: "\f080";
+}
+.icon-heart-o:before {
+  content: "\f08a";
+}
+.icon-phone:before {
+  content: "\f095";
+}
+.icon-twitter:before {
+  content: "\f099";
+}
+.icon-facebook:before {
+  content: "\f09a";
+}
+.icon-facebook-f:before {
+  content: "\f09a";
+}
+.icon-bell-o:before {
+  content: "\f0a2";
+}
+.icon-briefcase:before {
+  content: "\f0b1";
+}
+.icon-magic:before {
+  content: "\f0d0";
+}
+.icon-pinterest-square:before {
+  content: "\f0d3";
+}
+.icon-linkedin:before {
+  content: "\f0e1";
+}
+.icon-comment-o:before {
+  content: "\f0e5";
+}
+.icon-cloud-download:before {
+  content: "\f0ed";
+}
+.icon-angle-left:before {
+  content: "\f104";
+}
+.icon-angle-right:before {
+  content: "\f105";
+}
+.icon-angle-down:before {
+  content: "\f107";
+}
+.icon-smile-o:before {
+  content: "\f118";
+}
+.icon-html5:before {
+  content: "\f13b";
+}
+.icon-ellipsis-v:before {
+  content: "\f142";
+}
+.icon-pagelines:before {
+  content: "\f18c";
+}
+.icon-wordpress:before {
+  content: "\f19a";
+}
+.icon-google:before {
+  content: "\f1a0";
+}
+.icon-futbol-o:before {
+  content: "\f1e3";
+}
+.icon-soccer-ball-o:before {
+  content: "\f1e3";
+}
+.icon-volume-control-phone:before {
+  content: "\f2a0";
+}
+.icon-address-card-o:before {
+  content: "\f2bc";
+}
+.icon-vcard-o:before {
+  content: "\f2bc";
+}
+.icon-user-o:before {
+  content: "\f2c0";
+}
