--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -11,6 +11,7 @@ body {
 a {
   display: inline-block;
   text-decoration: none;
+  color: #000;
 }
 ul,
 li{
@@ -19,7 +20,11 @@ li{
   margin: 0;
 }
 body{
-
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 25px;
+  color: $text;
 }
 .wrapper {
   display: flex;
@@ -29,21 +34,25 @@ body{
 .content {
   flex: 1 0 auto;
 }
-.page-content{
-  background-color: $grey;
-}
+
 .footer {
   flex: 0 0 auto;
 }
 .container{
-  max-width: 1200px;
+  max-width: 1170px;
   margin: 0 auto;
   padding: 0 15px;
+}
+.sgrey{
+  background-color: #eef1f3;
+}
+.grey{
+  background-color: #eff1f5;
 }
 .container-fluid{
   max-width: 100%;
   margin: 0 auto;
-  padding: 0 30px;
+  //padding: 0 30px;
 }
 @media (max-width: 720px) {
   .container-fluid{
