--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,7 +1,12 @@
-$text: #546e7a;
-
+$text: #555;
+$blue: #0674ec;
+$fil: #7347c1;
 
 @mixin f500{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Quicksand', sans-serif;
   font-weight: 500;
+}
+@mixin f700{
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 700;
 }
