--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -39,8 +39,32 @@
 .icon-envelope-o:before {
   content: "\f003";
 }
+.icon-star-o:before {
+  content: "\f006";
+}
+.icon-user:before {
+  content: "\f007";
+}
+.icon-signal:before {
+  content: "\f012";
+}
+.icon-cog:before {
+  content: "\f013";
+}
+.icon-gear:before {
+  content: "\f013";
+}
+.icon-trash-o:before {
+  content: "\f014";
+}
+.icon-home:before {
+  content: "\f015";
+}
 .icon-lock:before {
   content: "\f023";
+}
+.icon-book:before {
+  content: "\f02d";
 }
 .icon-map-marker:before {
   content: "\f041";
@@ -60,6 +84,12 @@
 .icon-heart-o:before {
   content: "\f08a";
 }
+.icon-sign-out:before {
+  content: "\f08b";
+}
+.icon-upload:before {
+  content: "\f093";
+}
 .icon-phone:before {
   content: "\f095";
 }
@@ -78,11 +108,20 @@
 .icon-briefcase:before {
   content: "\f0b1";
 }
+.icon-group:before {
+  content: "\f0c0";
+}
+.icon-users:before {
+  content: "\f0c0";
+}
 .icon-magic:before {
   content: "\f0d0";
 }
 .icon-pinterest-square:before {
   content: "\f0d3";
+}
+.icon-caret-down:before {
+  content: "\f0d7";
 }
 .icon-linkedin:before {
   content: "\f0e1";
@@ -93,6 +132,12 @@
 .icon-cloud-download:before {
   content: "\f0ed";
 }
+.icon-suitcase:before {
+  content: "\f0f2";
+}
+.icon-file-text-o:before {
+  content: "\f0f6";
+}
 .icon-angle-left:before {
   content: "\f104";
 }
@@ -101,6 +146,12 @@
 }
 .icon-angle-down:before {
   content: "\f107";
+}
+.icon-mail-reply:before {
+  content: "\f112";
+}
+.icon-reply:before {
+  content: "\f112";
 }
 .icon-smile-o:before {
   content: "\f118";
@@ -119,6 +170,15 @@
 }
 .icon-google:before {
   content: "\f1a0";
+}
+.icon-paw:before {
+  content: "\f1b0";
+}
+.icon-database:before {
+  content: "\f1c0";
+}
+.icon-file-powerpoint-o:before {
+  content: "\f1c4";
 }
 .icon-futbol-o:before {
   content: "\f1e3";
