--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -7,11 +7,23 @@ html{
 html,
 body {
   height: 100%;
+  position: relative;
+  overflow-x: hidden;
 }
 a {
   display: inline-block;
   text-decoration: none;
   color: #000;
+  outline: none;
+}
+h1,h2,h3,h4,h5,h6{
+  margin: 0;
+  padding: 0;
+  font-size: inherit;
+  font-weight: inherit;
+}
+p{
+  margin: 0;
 }
 ul,
 li{
@@ -34,7 +46,6 @@ body{
 .content {
   flex: 1 0 auto;
 }
-
 .footer {
   flex: 0 0 auto;
 }
@@ -44,15 +55,15 @@ body{
   padding: 0 15px;
 }
 .sgrey{
-  background-color: #eef1f3;
+  background-color: #f6f7fb;
 }
 .grey{
   background-color: #eff1f5;
 }
 .container-fluid{
-  max-width: 100%;
+  max-width: 1920px;
   margin: 0 auto;
-  //padding: 0 30px;
+  padding: 0 30px;
 }
 @media (max-width: 720px) {
   .container-fluid{
