--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -499,7 +499,7 @@
   overflow: hidden;
   height: 0;
   width: 270px;
-  z-index: 5;
+  z-index: 15;
   box-shadow: 0 5px 40px rgba(82, 85, 90, 0.2);
   border-radius: 0 0 3px 3px;
   border-top: 0px solid $blue;
@@ -1903,7 +1903,6 @@ p, .join-inner__content{
   a,span{
     color: #fff;
     font-size: 15px;
-
   }
   li + li {
     padding-left: 10px;
@@ -1993,6 +1992,7 @@ p, .join-inner__content{
     &:hover{
       background-color: $blue;
       color: #fff;
+      font-size: 20px;
     }
   }
 }
@@ -2001,7 +2001,7 @@ p, .join-inner__content{
     width: 210px;
     top: -28px;
     left: -18px;
-    padding: 9px 10px 10px;
+    padding: 9px 10px 10px 15px;
   }
   .jq-selectbox__trigger-arrow{
     &:before{
@@ -2009,7 +2009,7 @@ p, .join-inner__content{
       content: "\f107";
       color: $text;
       top: -19px;
-      right: -186px;
+      right: -170px;
       font-size: 16px;
       font-family: 'icomoon';
     }
@@ -2460,5 +2460,202 @@ p, .join-inner__content{
   }
 }
 //end  products
+//start favorites
+.breadcrumbs {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #441c7c;
+  min-height: 181px;
+  &__inner {
+    width: 1000px;
+    overflow: hidden;
+    padding: 50px 0;
+  }
+  &-list {
+    li {
+      display: inline-block;
+      &:last-child {
+        a, span {
+          color: #f3f3f8;
+          opacity: .6;
+        }
+      }
+    }
+    a, span {
+      color: #fff;
+      font-size: 15px;
+
+    }
+    li + li {
+      padding-left: 10px;
+      &:before {
+        content: '/';
+        color: #fff;
+        font-size: 15px;
+        margin-right: 10px;
+      }
+    }
+  }
+  h1,h2,h3,.breadcrumbs-list__title{
+    color: #fff;
+    font-size: 30px;
+    @include f500;
+    margin-top: 25px;
+  }
+}
+.favorites__set-product{
+  &.set-product{
+    padding-top: 0;
+  }
+  .product-pick{
+    height: 100px;
+    padding-top: 40px;
+    border-right:1px solid #eceff2;
+    width: 332px;
+    .favorites-link{
+      color: #000;
+      @include f500;
+    }
+  }
+  .product-filter{
+    height: 100px;
+    padding-top: 40px;
+    width: 150px;
+    margin-left: -30px;
+    border-right:1px solid #eceff2;
+    .jq-selectbox__select-text{
+      width: 100%;
+      text-align: center;
+      position: relative;
+    }
+    .jq-selectbox__dropdown{
+      width: 125px !important;
+      left: 0;
+      top: 30px;
+      border-top: 1px solid #eceff2;
+      li{
+      width: 120px;
+      }
+    }
+    .label-arrow__price .jq-selectbox__trigger-arrow{
+      &:before{
+        position: absolute;
+        content: "\f107";
+        color: $text;
+        right: -8px;
+        top: 0;
+        font-size: 16px;
+        font-family: 'icomoon';
+      }
+    }
+  }
+}
+//end favorites
+//start favorites-products
+.favorites-products{
+  padding: 80px 10px;
+}
+.favorites-products__inner{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  margin-left: -30px;
+}
+.favorites-item {
+  flex-basis: calc(33.333% - 30px);
+  margin-left: 30px;
+  height: 495px;
+  margin-bottom: 30px;
+  .products-item__img {
+    max-width: 100%;
+    height: 230px;
+  }
+  .products-item__title {
+    a {
+      font-size: 20px;
+    }
+  }
+  .products-item__user{
+    span{
+      margin-left: 15px;
+      color: $fil;
+      &:before{
+        margin-right: 7px;
+      }
+    }
+  }
+  .products-item__title-text{
+    margin-bottom: 20px;
+  }
+  .products-item__bottom{
+    border-top: 1px solid #ececec;
+    align-items: center;
+    .products-bottom__link-price{
+      white-space: nowrap;
+      padding: 4px 13px;
+      font-size: 15px;
+    }
+    .icon-heart-o{
+      margin-bottom: 2px;
+      background-color: #fff;
+      position: relative;
+      &:before{
+        position: absolute;
+        left: 2px;
+        top: 5px;
+      }
+    }
+    .rate-star__product{
+      margin-left: -20px;
+    }
+    .products-item__bottom-cart{
+      a{
+        background-color: #fff;
+        padding: 0;
+        &:before{
+          margin-right: 5px;
+        }
+      }
+    }
+  }
+}
+.favorites-products{
+  .favorites-item{
+    &.list{
+      flex-basis: 100%;
+      height: 230px;
+      .products-item__img{
+        width: 360px;
+        float: left;
+        margin-right: 20px;
+      }
+      .products-item__user{
+        a{
+          padding-left: 30px;
+        }
+        img{
+          left: 360px;
+        }
+      }
+      .products-item__bottom{
+        padding: 15px 0;
+        margin-right: 20px;
+      }
+      .products-item__bottom-recall{
+        max-width: 500px;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+    }
+  }
+}
+.favorites-pagination{
+  margin: 0 auto;
+  padding-top: 50px;
+}
+//end favorites-products
 //start
 @import "media";
