aded price-product

--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -211,6 +211,9 @@
 .icon-soccer-ball-o:before {
   content: "\f1e3";
 }
+.icon-question-circle-o:before {
+  content: "\f29c";
+}
 .icon-volume-control-phone:before {
   content: "\f2a0";
 }
