--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3296,5 +3296,48 @@ p,.terms__inner-text{
   }
 }
 //end price-cart 
+//start login
+.login{
+  padding: 70px 0 100px;
+}
+.login__inner{
+  width: 555px;
+  margin: 0 auto;
+  height: 100%;
+  box-shadow: 0 2px 4px rgba(108, 111, 115, 0.1);
+  border-radius: 4px;
+  background-color: #ffffff;
+}
+p, .login__inner-text{
+  padding: 50px 50px 30px;
+  border-bottom: 1px solid #ececec;
+}
+.login-form{
+  padding: 40px 50px 60px;
+  input{
+    width: 100%;
+    height: 50px;
+    background-color: #f4f5f8;
+    padding: 0 15px;
+    border: none;
+    margin-bottom: 30px;
+    &:placeholder{
+      padding: 0 15px;
+    }
+  }
+  .links{
+    background-color: $blue;
+    color: #fff;
+    cursor: pointer;
+  }
+}
+.login-form__title{
+  color: #000;
+  @include f500;
+  margin-bottom: 15px;
+}
+//end login
 //start
+
+
 @import "media";
